Bandgap: tran: add PTAT resistor voltage

--- a/sim/LELO_GR04_BG/README.html
+++ b/sim/LELO_GR04_BG/README.html
@@ -279,6 +279,50 @@ style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
 <td style="text-align: center;">0.422</td>
 <td style="text-align: right;"></td>
 </tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>Bandgap resistor
+voltage</strong></td>
+<td style="text-align: left;"><strong>vrd</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>30.000</strong></td>
+<td style="text-align: center;"><strong>52.000</strong></td>
+<td style="text-align: center;"><strong>80.000</strong></td>
+<td style="text-align: right;"><strong>mV</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">54.650</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;">41.910</td>
+<td style="text-align: center;">57.520</td>
+<td style="text-align: center;">74.895</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;">43.472</td>
+<td style="text-align: center;">55.582</td>
+<td style="text-align: center;">67.691</td>
+<td style="text-align: right;"></td>
+</tr>
 </tbody>
 </table>
 </body>
