Bandgap: add loop stability sim
Gain margin = 7dB, phase margin = 25deg. One corner unity-gain freq is 0.2MHz -> could cascoding help with varying Vds?

--- a/sim/LELO_GR04_BG/README.html
+++ b/sim/LELO_GR04_BG/README.html
@@ -325,5 +325,222 @@ style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
 </tr>
 </tbody>
 </table>
+<h4 id="loop-stability-analysis-lstb">Loop stability analysis
+(lstb)</h4>
+<p>Check loop stability of OTA-bandgap</p>
+<table>
+<colgroup>
+<col style="width: 11%" />
+<col style="width: 11%" />
+<col style="width: 11%" />
+<col style="width: 11%" />
+<col style="width: 14%" />
+<col style="width: 14%" />
+<col style="width: 14%" />
+<col style="width: 11%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: left;"><strong>Name</strong></th>
+<th style="text-align: left;"><strong>Parameter</strong></th>
+<th style="text-align: left;"><strong>Description</strong></th>
+<th style="text-align: right;"></th>
+<th style="text-align: center;"><strong>Min</strong></th>
+<th style="text-align: center;"><strong>Typ</strong></th>
+<th style="text-align: center;"><strong>Max</strong></th>
+<th style="text-align: right;">Unit</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;"><strong>Gain margin</strong></td>
+<td style="text-align: left;"><strong>gm_db</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>-20.000</strong></td>
+<td style="text-align: center;"><strong>-50.000</strong></td>
+<td style="text-align: center;"><strong>-10.000</strong></td>
+<td style="text-align: right;"><strong>dB</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/lstb_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-7.360</strong></span></td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/lstb_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-20.957</strong></span></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-7.629</strong></span></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-5.042</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/lstb_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-8.868</strong></span></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-7.357</strong></span></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-5.846</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>Phase margin</strong></td>
+<td style="text-align: left;"><strong>pm_deg</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>45.000</strong></td>
+<td style="text-align: center;"><strong>60.000</strong></td>
+<td style="text-align: center;"><strong>90.000</strong></td>
+<td style="text-align: right;"><strong>deg</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/lstb_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>27.551</strong></span></td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/lstb_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>14.367</strong></span></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>26.918</strong></span></td>
+<td style="text-align: center;">80.145</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/lstb_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>20.761</strong></span></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>28.131</strong></span></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>35.500</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>Loop gain</strong></td>
+<td style="text-align: left;"><strong>lf_gain</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>20.000</strong></td>
+<td style="text-align: center;"><strong>35.000</strong></td>
+<td style="text-align: center;"><strong>50.000</strong></td>
+<td style="text-align: right;"><strong>dB</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/lstb_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">35.245</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/lstb_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;">30.797</td>
+<td style="text-align: center;">32.967</td>
+<td style="text-align: center;">36.442</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/lstb_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;">33.758</td>
+<td style="text-align: center;">35.380</td>
+<td style="text-align: center;">37.002</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>Unity-gain frequency</strong></td>
+<td style="text-align: left;"><strong>f_ug</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>5.000</strong></td>
+<td style="text-align: center;"><strong>15.000</strong></td>
+<td style="text-align: center;"><strong>50.000</strong></td>
+<td style="text-align: right;"><strong>MHz</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/lstb_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">41.518</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/lstb_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>0.215</strong></span></td>
+<td style="text-align: center;">40.911</td>
+<td style="text-align: center;"><span
+style="color:red"><strong>90.270</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/lstb_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;">31.778</td>
+<td style="text-align: center;">42.931</td>
+<td style="text-align: center;"><span
+style="color:red"><strong>54.083</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+</tbody>
+</table>
 </body>
 </html>
