--- a/sim/LELO_GR04_BG/README.html
+++ b/sim/LELO_GR04_BG/README.html
@@ -209,7 +209,7 @@
 <td
 style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></td>
 <td style="text-align: center;"></td>
-<td style="text-align: center;">9.749</td>
+<td style="text-align: center;">13.864</td>
 <td style="text-align: center;"></td>
 <td style="text-align: right;"></td>
 </tr>
@@ -219,10 +219,10 @@ style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;">7.096</td>
+<td style="text-align: center;">28.368</td>
 <td style="text-align: center;"><span
-style="color:red"><strong>2.356</strong></span></td>
-<td style="text-align: center;">11.666</td>
-<td style="text-align: center;">35.941</td>
+style="color:red"><strong>142.111</strong></span></td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="even">
@@ -231,9 +231,9 @@ style="color:red"><strong>2.356</strong></span></td>
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
-<td style="text-align: center;">9.298</td>
-<td style="text-align: center;">9.784</td>
-<td style="text-align: center;">10.269</td>
+<td style="text-align: center;">12.383</td>
+<td style="text-align: center;">13.878</td>
+<td style="text-align: center;">15.373</td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="odd">
@@ -253,7 +253,7 @@ style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></td>
 <td style="text-align: center;"></td>
-<td style="text-align: center;">0.497</td>
+<td style="text-align: center;">0.534</td>
 <td style="text-align: center;"></td>
 <td style="text-align: right;"></td>
 </tr>
@@ -263,9 +263,9 @@ style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
-<td style="text-align: center;">0.388</td>
-<td style="text-align: center;">0.713</td>
-<td style="text-align: center;">1.705</td>
+<td style="text-align: center;">0.421</td>
+<td style="text-align: center;">0.784</td>
+<td style="text-align: center;">1.596</td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="even">
@@ -274,9 +274,9 @@ style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
-<td style="text-align: center;">0.496</td>
-<td style="text-align: center;">0.497</td>
-<td style="text-align: center;">0.499</td>
+<td style="text-align: center;">0.533</td>
+<td style="text-align: center;">0.534</td>
+<td style="text-align: center;">0.536</td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="odd">
@@ -297,7 +297,7 @@ voltage</strong></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></td>
 <td style="text-align: center;"></td>
-<td style="text-align: center;">54.649</td>
+<td style="text-align: center;">54.732</td>
 <td style="text-align: center;"></td>
 <td style="text-align: right;"></td>
 </tr>
@@ -307,9 +307,10 @@ style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
-<td style="text-align: center;">41.845</td>
-<td style="text-align: center;">57.519</td>
-<td style="text-align: center;">74.895</td>
+<td style="text-align: center;">42.576</td>
+<td style="text-align: center;">73.377</td>
+<td style="text-align: center;"><span
+style="color:red"><strong>706.851</strong></span></td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="even">
@@ -318,9 +319,9 @@ style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
-<td style="text-align: center;">43.472</td>
-<td style="text-align: center;">55.581</td>
-<td style="text-align: center;">67.690</td>
+<td style="text-align: center;">43.577</td>
+<td style="text-align: center;">55.618</td>
+<td style="text-align: center;">67.658</td>
 <td style="text-align: right;"></td>
 </tr>
 </tbody>
@@ -369,7 +370,7 @@ style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
 <td
 style="text-align: right;"><a href='results/lstb_Sch_typical.html'>Sch_typ</a></td>
 <td style="text-align: center;"></td>
-<td style="text-align: center;">-16.652</td>
+<td style="text-align: center;">-16.424</td>
 <td style="text-align: center;"></td>
 <td style="text-align: right;"></td>
 </tr>
@@ -390,9 +391,9 @@ style="text-align: right;"><a href='results/lstb_Sch_etc.html'>Sch_etc</a></td>
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/lstb_Sch_mc.html'>Sch_3std</a></td>
-<td style="text-align: center;">-18.017</td>
-<td style="text-align: center;">-16.557</td>
-<td style="text-align: center;">-15.096</td>
+<td style="text-align: center;">-17.784</td>
+<td style="text-align: center;">-16.334</td>
+<td style="text-align: center;">-14.884</td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="odd">
@@ -412,7 +413,7 @@ style="text-align: right;"><a href='results/lstb_Sch_mc.html'>Sch_3std</a></td>
 <td
 style="text-align: right;"><a href='results/lstb_Sch_typical.html'>Sch_typ</a></td>
 <td style="text-align: center;"></td>
-<td style="text-align: center;">59.187</td>
+<td style="text-align: center;">60.355</td>
 <td style="text-align: center;"></td>
 <td style="text-align: right;"></td>
 </tr>
@@ -434,9 +435,9 @@ style="color:red"><strong>39.849</strong></span></td>
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/lstb_Sch_mc.html'>Sch_3std</a></td>
-<td style="text-align: center;">55.898</td>
-<td style="text-align: center;">59.029</td>
-<td style="text-align: center;">62.161</td>
+<td style="text-align: center;">56.682</td>
+<td style="text-align: center;">60.158</td>
+<td style="text-align: center;">63.633</td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="odd">
@@ -456,7 +457,7 @@ style="text-align: right;"><a href='results/lstb_Sch_mc.html'>Sch_3std</a></td>
 <td
 style="text-align: right;"><a href='results/lstb_Sch_typical.html'>Sch_typ</a></td>
 <td style="text-align: center;"></td>
-<td style="text-align: center;">35.278</td>
+<td style="text-align: center;">36.585</td>
 <td style="text-align: center;"></td>
 <td style="text-align: right;"></td>
 </tr>
@@ -477,9 +478,9 @@ style="text-align: right;"><a href='results/lstb_Sch_etc.html'>Sch_etc</a></td>
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/lstb_Sch_mc.html'>Sch_3std</a></td>
-<td style="text-align: center;">33.884</td>
-<td style="text-align: center;">35.343</td>
-<td style="text-align: center;">36.801</td>
+<td style="text-align: center;">35.097</td>
+<td style="text-align: center;">36.649</td>
+<td style="text-align: center;">38.200</td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="odd">
@@ -499,7 +500,7 @@ style="text-align: right;"><a href='results/lstb_Sch_mc.html'>Sch_3std</a></td>
 <td
 style="text-align: right;"><a href='results/lstb_Sch_typical.html'>Sch_typ</a></td>
 <td style="text-align: center;"></td>
-<td style="text-align: center;">18.040</td>
+<td style="text-align: center;">17.838</td>
 <td style="text-align: center;"></td>
 <td style="text-align: right;"></td>
 </tr>
@@ -521,9 +522,270 @@ style="color:red"><strong>0.069</strong></span></td>
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/lstb_Sch_mc.html'>Sch_3std</a></td>
-<td style="text-align: center;">15.746</td>
-<td style="text-align: center;">18.154</td>
-<td style="text-align: center;">20.563</td>
+<td style="text-align: center;">15.440</td>
+<td style="text-align: center;">17.944</td>
+<td style="text-align: center;">20.449</td>
+<td style="text-align: right;"></td>
+</tr>
+</tbody>
+</table>
+<h4 id="dc-dc">DC (dc)</h4>
+<p>Check temperature performance</p>
+<table>
+<colgroup>
+<col style="width: 11%" />
+<col style="width: 11%" />
+<col style="width: 11%" />
+<col style="width: 11%" />
+<col style="width: 14%" />
+<col style="width: 14%" />
+<col style="width: 14%" />
+<col style="width: 11%" />
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: left;"><strong>Name</strong></th>
+<th style="text-align: left;"><strong>Parameter</strong></th>
+<th style="text-align: left;"><strong>Description</strong></th>
+<th style="text-align: right;"></th>
+<th style="text-align: center;"><strong>Min</strong></th>
+<th style="text-align: center;"><strong>Typ</strong></th>
+<th style="text-align: center;"><strong>Max</strong></th>
+<th style="text-align: right;">Unit</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: left;"><strong>IPTAT @ 1.1V output &amp;
+25C</strong></td>
+<td style="text-align: left;"><strong>i2_25</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>1.500</strong></td>
+<td style="text-align: center;"><strong>1.700</strong></td>
+<td style="text-align: center;"><strong>1.900</strong></td>
+<td style="text-align: right;"><strong>uA</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">1.714</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;"><span
+style="color:orange"><strong>1.496</strong></span></td>
+<td style="text-align: center;">1.715</td>
+<td style="text-align: center;"><span
+style="color:orange"><strong>1.992</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>0.906</strong></span></td>
+<td style="text-align: center;">1.711</td>
+<td style="text-align: center;"><span
+style="color:red"><strong>2.516</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>IPTAT error @ 1.1V
+output</strong></td>
+<td style="text-align: left;"><strong>i2_err_max</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>-30.000</strong></td>
+<td style="text-align: center;"><strong>0.000</strong></td>
+<td style="text-align: center;"><strong>30.000</strong></td>
+<td style="text-align: right;"><strong>nA</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">6.376</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;">4.447</td>
+<td style="text-align: center;"><span
+style="color:red"><strong>8676.967</strong></span></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>26938.500</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;">-23.605</td>
+<td style="text-align: center;">11.037</td>
+<td style="text-align: center;"><span
+style="color:red"><strong>45.678</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>IPTAT error @ 1.1V
+output</strong></td>
+<td style="text-align: left;"><strong>i2_err_min</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>-30.000</strong></td>
+<td style="text-align: center;"><strong>0.000</strong></td>
+<td style="text-align: center;"><strong>30.000</strong></td>
+<td style="text-align: right;"><strong>nA</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">-21.390</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-7298.680</strong></span></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-2582.902</strong></span></td>
+<td style="text-align: center;">-21.561</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-73.839</strong></span></td>
+<td style="text-align: center;">-21.474</td>
+<td style="text-align: center;"><span
+style="color:orange"><strong>30.890</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>IPTAT temperature
+coefficient</strong></td>
+<td style="text-align: left;"><strong>a_avg</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>2.500</strong></td>
+<td style="text-align: center;"><strong>5.000</strong></td>
+<td style="text-align: center;"><strong>7.500</strong></td>
+<td style="text-align: right;"><strong>nA / K</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">4.842</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-241.650</strong></span></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-75.661</strong></span></td>
+<td style="text-align: center;">5.767</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;">2.852</td>
+<td style="text-align: center;">4.664</td>
+<td style="text-align: center;">6.476</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>IPTAT offset range @ 0.3-1.5V
+output &amp; 25C</strong></td>
+<td style="text-align: left;"><strong>offsets_range_25</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>0.000</strong></td>
+<td style="text-align: center;"><strong>0.000</strong></td>
+<td style="text-align: center;"><strong>20.000</strong></td>
+<td style="text-align: right;"><strong>nA</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">17.974</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;">15.573</td>
+<td style="text-align: center;">17.885</td>
+<td style="text-align: center;">20.828</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;">-43.815</td>
+<td style="text-align: center;">208.585</td>
+<td style="text-align: center;">460.986</td>
 <td style="text-align: right;"></td>
 </tr>
 </tbody>
