Bandgap: tran: add output currents & settling time (2%)

--- a/sim/LELO_GR04_BG/README.html
+++ b/sim/LELO_GR04_BG/README.html
@@ -209,7 +209,7 @@
 <td
 style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></td>
 <td style="text-align: center;"></td>
-<td style="text-align: center;">15.101</td>
+<td style="text-align: center;">21.979</td>
 <td style="text-align: center;"></td>
 <td style="text-align: right;"></td>
 </tr>
@@ -219,11 +219,10 @@ style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;">6.474</td>
+<td style="text-align: center;">25.405</td>
 <td style="text-align: center;"><span
-style="color:red"><strong>2.199</strong></span></td>
-<td style="text-align: center;">18.522</td>
-<td style="text-align: center;"><span
-style="color:red"><strong>63.675</strong></span></td>
+style="color:red"><strong>73.853</strong></span></td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="even">
@@ -232,9 +231,9 @@ style="color:red"><strong>63.675</strong></span></td>
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
-<td style="text-align: center;">14.646</td>
-<td style="text-align: center;">15.081</td>
-<td style="text-align: center;">15.516</td>
+<td style="text-align: center;">20.200</td>
+<td style="text-align: center;">22.105</td>
+<td style="text-align: center;">24.010</td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="odd">
@@ -254,7 +253,7 @@ style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></td>
 <td style="text-align: center;"></td>
-<td style="text-align: center;">0.161</td>
+<td style="text-align: center;">0.188</td>
 <td style="text-align: center;"></td>
 <td style="text-align: right;"></td>
 </tr>
@@ -264,9 +263,9 @@ style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
-<td style="text-align: center;">-0.001</td>
-<td style="text-align: center;">0.787</td>
-<td style="text-align: center;">2.338</td>
+<td style="text-align: center;">-0.027</td>
+<td style="text-align: center;">0.776</td>
+<td style="text-align: center;">2.360</td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="even">
@@ -275,9 +274,188 @@ style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
-<td style="text-align: center;">0.156</td>
-<td style="text-align: center;">0.161</td>
-<td style="text-align: center;">0.166</td>
+<td style="text-align: center;">0.181</td>
+<td style="text-align: center;">0.188</td>
+<td style="text-align: center;">0.195</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>Output current @
+0.2-1.1V</strong></td>
+<td style="text-align: left;"><strong>i0</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>1.000</strong></td>
+<td style="text-align: center;"><strong>1.700</strong></td>
+<td style="text-align: center;"><strong>2.500</strong></td>
+<td style="text-align: right;"><strong>uA</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">1.720</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;">1.055</td>
+<td style="text-align: center;">1.725</td>
+<td style="text-align: center;"><span
+style="color:orange"><strong>2.600</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;">1.186</td>
+<td style="text-align: center;">1.741</td>
+<td style="text-align: center;">2.296</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>Output current @
+0.2-1.1V</strong></td>
+<td style="text-align: left;"><strong>i1</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>1.000</strong></td>
+<td style="text-align: center;"><strong>1.700</strong></td>
+<td style="text-align: center;"><strong>2.500</strong></td>
+<td style="text-align: right;"><strong>uA</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">1.719</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;">1.071</td>
+<td style="text-align: center;">1.733</td>
+<td style="text-align: center;"><span
+style="color:orange"><strong>2.610</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;">1.232</td>
+<td style="text-align: center;">1.734</td>
+<td style="text-align: center;">2.237</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>Output current @
+0.2-1.1V</strong></td>
+<td style="text-align: left;"><strong>i2</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>1.000</strong></td>
+<td style="text-align: center;"><strong>1.700</strong></td>
+<td style="text-align: center;"><strong>2.500</strong></td>
+<td style="text-align: right;"><strong>uA</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">1.718</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;">1.064</td>
+<td style="text-align: center;">1.718</td>
+<td style="text-align: center;"><span
+style="color:red"><strong>2.689</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;">1.229</td>
+<td style="text-align: center;">1.783</td>
+<td style="text-align: center;">2.336</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>Output current @
+0.2-1.1V</strong></td>
+<td style="text-align: left;"><strong>i3</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>1.000</strong></td>
+<td style="text-align: center;"><strong>1.700</strong></td>
+<td style="text-align: center;"><strong>2.500</strong></td>
+<td style="text-align: right;"><strong>uA</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">1.712</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;">1.065</td>
+<td style="text-align: center;">1.732</td>
+<td style="text-align: center;">2.426</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;">1.199</td>
+<td style="text-align: center;">1.761</td>
+<td style="text-align: center;">2.324</td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="odd">
@@ -308,7 +486,7 @@ style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
-<td style="text-align: center;">36.124</td>
+<td style="text-align: center;">36.534</td>
 <td style="text-align: center;">57.656</td>
 <td style="text-align: center;">75.032</td>
 <td style="text-align: right;"></td>
@@ -322,6 +500,50 @@ style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
 <td style="text-align: center;">43.577</td>
 <td style="text-align: center;">55.618</td>
 <td style="text-align: center;">67.658</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>Settling time (2%) @
+0.5V</strong></td>
+<td style="text-align: left;"><strong>t_settle_98</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>0.000</strong></td>
+<td style="text-align: center;"><strong>1.000</strong></td>
+<td style="text-align: center;"><strong>5.000</strong></td>
+<td style="text-align: right;"><strong>us</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">0.329</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;">0.153</td>
+<td style="text-align: center;">0.357</td>
+<td style="text-align: center;">8.488</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;">0.162</td>
+<td style="text-align: center;">0.332</td>
+<td style="text-align: center;">0.501</td>
 <td style="text-align: right;"></td>
 </tr>
 </tbody>
