Bandgap: add VCTAT measurements

--- a/sim/LELO_GR04_BG/README.html
+++ b/sim/LELO_GR04_BG/README.html
@@ -197,7 +197,7 @@
 <td style="text-align: left;"><strong>idd</strong></td>
 <td style="text-align: left;"></td>
 <td style="text-align: right;"><strong>Spec</strong></td>
-<td style="text-align: center;"><strong>5.000</strong></td>
+<td style="text-align: center;"><strong>0.000</strong></td>
 <td style="text-align: center;"><strong>15.000</strong></td>
 <td style="text-align: center;"><strong>50.000</strong></td>
 <td style="text-align: right;"><strong>uA</strong></td>
@@ -263,9 +263,11 @@ style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></
 <td style="text-align: left;"></td>
 <td
 style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
-<td style="text-align: center;">-0.027</td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-0.027</strong></span></td>
 <td style="text-align: center;">0.776</td>
-<td style="text-align: center;">2.360</td>
+<td style="text-align: center;"><span
+style="color:red"><strong>2.360</strong></span></td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="even">
@@ -287,7 +289,7 @@ style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
 <td style="text-align: right;"><strong>Spec</strong></td>
 <td style="text-align: center;"><strong>1.000</strong></td>
 <td style="text-align: center;"><strong>1.700</strong></td>
-<td style="text-align: center;"><strong>2.500</strong></td>
+<td style="text-align: center;"><strong>2.600</strong></td>
 <td style="text-align: right;"><strong>uA</strong></td>
 </tr>
 <tr class="even">
@@ -332,7 +334,7 @@ style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
 <td style="text-align: right;"><strong>Spec</strong></td>
 <td style="text-align: center;"><strong>1.000</strong></td>
 <td style="text-align: center;"><strong>1.700</strong></td>
-<td style="text-align: center;"><strong>2.500</strong></td>
+<td style="text-align: center;"><strong>2.600</strong></td>
 <td style="text-align: right;"><strong>uA</strong></td>
 </tr>
 <tr class="even">
@@ -377,7 +379,7 @@ style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
 <td style="text-align: right;"><strong>Spec</strong></td>
 <td style="text-align: center;"><strong>1.000</strong></td>
 <td style="text-align: center;"><strong>1.700</strong></td>
-<td style="text-align: center;"><strong>2.500</strong></td>
+<td style="text-align: center;"><strong>2.600</strong></td>
 <td style="text-align: right;"><strong>uA</strong></td>
 </tr>
 <tr class="even">
@@ -400,7 +402,7 @@ style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
 <td style="text-align: center;">1.064</td>
 <td style="text-align: center;">1.718</td>
 <td style="text-align: center;"><span
-style="color:red"><strong>2.689</strong></span></td>
+style="color:orange"><strong>2.689</strong></span></td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="even">
@@ -422,7 +424,7 @@ style="text-align: right;"><a href='results/tran_Sch_mc.html'>Sch_3std</a></td>
 <td style="text-align: right;"><strong>Spec</strong></td>
 <td style="text-align: center;"><strong>1.000</strong></td>
 <td style="text-align: center;"><strong>1.700</strong></td>
-<td style="text-align: center;"><strong>2.500</strong></td>
+<td style="text-align: center;"><strong>2.600</strong></td>
 <td style="text-align: right;"><strong>uA</strong></td>
 </tr>
 <tr class="even">
@@ -532,7 +534,8 @@ style="text-align: right;"><a href='results/tran_Sch_typical.html'>Sch_typ</a></
 style="text-align: right;"><a href='results/tran_Sch_etc.html'>Sch_etc</a></td>
 <td style="text-align: center;">0.153</td>
 <td style="text-align: center;">0.357</td>
-<td style="text-align: center;">8.488</td>
+<td style="text-align: center;"><span
+style="color:red"><strong>8.488</strong></span></td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="even">
@@ -867,6 +870,94 @@ style="text-align: right;"><a href='results/dc_Sch_mc.html'>Sch_3std</a></td>
 <td style="text-align: right;"></td>
 </tr>
 <tr class="odd">
+<td style="text-align: left;"><strong>VCTAT @ 25C</strong></td>
+<td style="text-align: left;"><strong>v_ctat_25</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>650.000</strong></td>
+<td style="text-align: center;"><strong>700.000</strong></td>
+<td style="text-align: center;"><strong>750.000</strong></td>
+<td style="text-align: right;"><strong>mV</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">707.231</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;">706.303</td>
+<td style="text-align: center;">707.319</td>
+<td style="text-align: center;">708.331</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;">690.475</td>
+<td style="text-align: center;">708.477</td>
+<td style="text-align: center;">726.478</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>VCTAT temperature
+coefficient</strong></td>
+<td style="text-align: left;"><strong>a_ctat</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>-2.000</strong></td>
+<td style="text-align: center;"><strong>-1.800</strong></td>
+<td style="text-align: center;"><strong>-1.600</strong></td>
+<td style="text-align: right;"><strong>mV / K</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">-1.801</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;">-1.797</td>
+<td style="text-align: center;">-1.760</td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-0.893</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;">-1.885</td>
+<td style="text-align: center;">-1.807</td>
+<td style="text-align: center;">-1.729</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
 <td style="text-align: left;"><strong>IPTAT error @ 0.5V
 output</strong></td>
 <td style="text-align: left;"><strong>i1_err_max</strong></td>
@@ -1056,6 +1147,95 @@ style="color:red"><strong>-99.653</strong></span></td>
 style="color:red"><strong>-31.479</strong></span></td>
 <td style="text-align: center;"><span
 style="color:red"><strong>36.694</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>VCTAT error</strong></td>
+<td style="text-align: left;"><strong>v_ctat_err_max</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>-9.000</strong></td>
+<td style="text-align: center;"><strong>0.000</strong></td>
+<td style="text-align: center;"><strong>9.000</strong></td>
+<td style="text-align: right;"><strong>mV</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">0.248</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;">0.182</td>
+<td style="text-align: center;">0.383</td>
+<td style="text-align: center;"><span
+style="color:red"><strong>35.982</strong></span></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;">-0.858</td>
+<td style="text-align: center;">0.417</td>
+<td style="text-align: center;">1.691</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"><strong>VCTAT error</strong></td>
+<td style="text-align: left;"><strong>v_ctat_err_min</strong></td>
+<td style="text-align: left;"></td>
+<td style="text-align: right;"><strong>Spec</strong></td>
+<td style="text-align: center;"><strong>-9.000</strong></td>
+<td style="text-align: center;"><strong>0.000</strong></td>
+<td style="text-align: center;"><strong>9.000</strong></td>
+<td style="text-align: right;"><strong>mV</strong></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_typical.html'>Sch_typ</a></td>
+<td style="text-align: center;"></td>
+<td style="text-align: center;">-4.326</td>
+<td style="text-align: center;"></td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="odd">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_etc.html'>Sch_etc</a></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-100.304</strong></span></td>
+<td style="text-align: center;">-8.002</td>
+<td style="text-align: center;">-4.272</td>
+<td style="text-align: right;"></td>
+</tr>
+<tr class="even">
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td style="text-align: left;"></td>
+<td
+style="text-align: right;"><a href='results/dc_Sch_mc.html'>Sch_3std</a></td>
+<td style="text-align: center;"><span
+style="color:red"><strong>-9.276</strong></span></td>
+<td style="text-align: center;">-4.030</td>
+<td style="text-align: center;">1.216</td>
 <td style="text-align: right;"></td>
 </tr>
 </tbody>
